# GaragemDesafio

./: pyproject.toml
Garagem/: admin.py  models.py
Garagem/migrations/: 0001_initial.py  0002_marca_modelo.py
config/: settings.py
